--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -9,32 +9,32 @@ header {
     position: fixed;
     top: 0;
     z-index: 3;
-
     @media screen and (max-width: $mobile) {
       position: fixed;
       top: 0;
       left: 0;
-      box-shadow: $shadowBottom
+      box-shadow: $shadowBottom;
     }
-
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(239, 241, 244);
-    box-shadow: 0 1px 0.5px #0000001a
+    box-shadow: 0 1px 0.5px #0000001a;
   }
 
   &.indexHeader {
-    min-height: 60px
+    min-height: 60px;
   }
 
+
   &.loggedInHeader {
+
     @media screen and (min-width: $tablet) and (max-width: $desktop) {
       .pagesContainer.linksContainer {
         grid-gap: 3px;
 
         .headerLink {
           padding: 10px 10px;
-          font-size: $fontSizeRegular
+          font-size: $fontSizeRegular;
         }
       }
     }
@@ -48,11 +48,11 @@ header {
           font-size: 20px;
 
           span {
-            display: none
+            display: none;
           }
 
           svg {
-            display: block !important
+            display: block !important;
           }
         }
       }
@@ -69,12 +69,12 @@ header {
       width: 100%;
 
       @media screen and (max-width: $mobile) {
-        margin: 0 auto
+        margin: 0 auto;
       }
     }
 
     a {
-      text-decoration: none
+      text-decoration: none;
     }
 
     .logoLinkContainer {
@@ -83,7 +83,7 @@ header {
       height: 100%;
 
       svg {
-        height: 100%
+        height: 100%;
       }
     }
 
@@ -94,17 +94,17 @@ header {
         height: 25px !important;
 
         .badge small {
-          font-size: 10px !important
+          font-size: 10px !important;
         }
       }
+
 
       .zkwallet-logo {
         width: auto !important;
         height: 100% !important;
         object-fit: contain;
-
         @media (max-width: $mobile) {
-          height: 25px !important
+          height: 25px !important;
         }
       }
 
@@ -116,7 +116,7 @@ header {
         font-size: 12px !important;
         letter-spacing: 1px;
         text-transform: uppercase;
-        background: transparent !important
+        background: transparent !important;
       }
 
       @media (max-width: $mobile) {
@@ -124,13 +124,13 @@ header {
 
         .projectLogo {
           max-width: 130px !important;
-          object-fit: contain !important
+          object-fit: contain !important;
         }
       }
     }
 
     @media screen and (min-width: $desktop) {
-      max-width: $biggestWidth
+      max-width: $biggestWidth;
     }
   }
 
@@ -148,7 +148,7 @@ header {
       grid-gap: 15px;
 
       .mainLink {
-        font-size: 16px !important
+        font-size: 16px !important;
       }
     }
 
@@ -157,11 +157,10 @@ header {
       text-decoration: none;
       transition: color $transition1;
 
-      em,
-      i {
+      em, i {
         padding-left: 2px;
         color: $gray;
-        font-size: 12px
+        font-size: 12px;
       }
     }
 
@@ -173,7 +172,7 @@ header {
       will-change: background-color, color;
 
       @media screen and (min-width: $mobile) {
-        transition: $transition1
+        transition: $transition1;
       }
 
       &.nuxt-link-exact-active {
@@ -189,14 +188,13 @@ header {
     .pagesContainerRow {
       position: absolute;
       top: 0;
-      left: 0
+      left: 0;
     }
 
     .pagesContainer {
       background-color: $darkViolet;
-      box-shadow: $shadowTop
+      box-shadow: $shadowTop;
     }
-
     .pagesContainer {
       position: fixed;
       bottom: -1px;
@@ -217,16 +215,15 @@ header {
         font-size: $fontSizeRegular;
 
         &.nuxt-link-exact-active {
-          font-weight: 400
+          font-weight: 400;
         }
 
         svg {
           display: block;
-          margin: 0 auto
+          margin: 0 auto;
         }
-
         span {
-          margin-top: 2px
+          margin-top: 2px;
         }
       }
 
@@ -235,7 +232,7 @@ header {
         top: -5px;
         padding: 5px 10px;
         font-size: 20px;
-        margin-left: 10px
+        margin-left: 10px;
       }
     }
   }
@@ -262,13 +259,13 @@ header {
         color: darken($tempLightGray, 20);
         font-size: $fontSizeRegular;
         line-height: 20px;
-        text-align: left
+        text-align: left;
       }
 
       .address {
         font-size: $fontSizeRegular;
         line-height: 20px;
-        white-space: nowrap
+        white-space: nowrap;
       }
     }
 
@@ -279,21 +276,21 @@ header {
       img {
         width: 100%;
         height: 100%;
-        border-radius: 40%
+        border-radius: 40%;
       }
     }
 
     .dropdownArrow {
       color: $lightViolet;
       font-size: 20px;
-      text-align: right
+      text-align: right;
     }
 
     @media screen and (max-width: $mobile) {
       grid-template-columns: 32px 30px;
 
       .userDropdownAddress {
-        display: none
+        display: none;
       }
     }
   }
@@ -310,7 +307,7 @@ header {
       grid-gap: 20px;
 
       a {
-        font-size: $fontSizeRegular !important
+        font-size: $fontSizeRegular !important;
       }
     }
 
@@ -325,19 +322,19 @@ header {
 
       &.nuxt-link-exact-active,
       &:hover {
-        &:after {
-          background: $lightViolet
+        &::after {
+          background: $lightViolet;
         }
       }
 
-      &:after {
+      &::after {
         position: absolute;
         bottom: -2px;
         left: 0;
         width: 100%;
         height: 4px;
         background: $tempTransparent;
-        content: ""
+        content: "";
       }
     }
   }
@@ -350,7 +347,7 @@ header {
 
     @media (max-width: $mobile) {
       width: 160px;
-      height: 160px
+      height: 160px;
     }
   }
 }
@@ -359,13 +356,14 @@ body.inkline.-light header {
   background: $bgLight;
 
   .linksContainer .mainLink {
-    color: $black
+    color: $black;
   }
 
   .pagesContainer,
   .mobileFooter {
+
     @media screen and (max-width: $mobile) {
-      background-color: $white
+      background-color: $white;
     }
   }
 }
@@ -375,11 +373,11 @@ body.inkline.-dark header.layout-header {
   border-bottom-color: rgba(3, 5, 17, 0.98) !important;
 
   .userDropdown .userDropdownAddress .walletLabel {
-    color: $gray
+    color: $gray;
   }
 
   .linksContainer .mainLink {
-    color: $white
+    color: $white;
   }
 
   .linksContainer .headerLink {
@@ -387,7 +385,7 @@ body.inkline.-dark header.layout-header {
 
     &.nuxt-link-exact-active {
       color: darken($color: $white, $amount: 15);
-      background-color: darken($color: $darkViolet, $amount: 5)
+      background-color: darken($color: $darkViolet, $amount: 5);
     }
   }
 }
