--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -7,17 +7,17 @@
 
     .dappPageWrapper {
       & > * {
-        margin: 1rem 0
+        margin: 1rem 0;
       }
     }
   }
-
+  
   footer a {
     color: $purple;
     transition: color $transition2;
-
+    
     &:hover {
-      color: $lightViolet
+      color: $lightViolet;
     }
   }
 
@@ -25,25 +25,25 @@
     //min-height: $minRouteHeightWithExtra;
 
     .routerContainer {
-      min-height: auto
+      min-height: auto;
     }
   }
 
   .projectLogo {
     width: 100%;
     max-width: 300px;
-    height: auto
+    height: auto;
   }
 
   .tileContainer {
     cursor: pointer;
 
     @media screen and (min-width: $mobile) {
-      padding-bottom: $footerHeight
+      padding-bottom: $footerHeight;
     }
 
     &:hover .tile {
-      box-shadow: $hoverShadow
+      box-shadow: $hoverShadow;
     }
 
     .tile {
@@ -60,7 +60,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transition: $transition1
+        transition: $transition1;
       }
 
       .tileIcon {
@@ -75,13 +75,13 @@
         background-color: $white;
         border-radius: 50%;
         opacity: 0;
-        transition: $transition2
+        transition: $transition2;
       }
     }
 
     .tileName {
       padding-top: 7px;
-      font-size: 18px
+      font-size: 18px;
     }
   }
 
@@ -91,18 +91,16 @@
 
     &.-dark {
       .iconsBlock a {
-        i,
-        .ov-icon {
-          color: $darkViolet
+        i, .ov-icon {
+          color: $darkViolet;
         }
       }
     }
 
     &.-light {
       .iconsBlock a {
-        i,
-        .ov-icon {
-          color: $white
+        i, .ov-icon {
+          color: $white;
         }
       }
     }
@@ -110,13 +108,13 @@
     .h5 {
       margin: 0;
       font-size: 22px;
-      text-align: center
+      text-align: center;
     }
 
     .description {
       margin-bottom: 15px;
       font-size: 16px;
-      line-height: 20px
+      line-height: 20px;
     }
 
     .contactInfo {
@@ -127,7 +125,7 @@
       .infoDescription {
         font-size: 12px;
         line-height: 15px;
-        text-align: center
+        text-align: center;
       }
 
       .iconsBlock {
@@ -144,14 +142,13 @@
           background-color: $violet;
           border-radius: 50%;
 
-          i,
-          .ov-icon {
+          i, .ov-icon {
             display: block;
             width: 100%;
             height: 100%;
             font-size: 20px;
             line-height: 48px;
-            text-align: center
+            text-align: center;
           }
         }
       }
