--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -14,7 +14,7 @@
     h1 {
       font-weight: 800;
       font-size: 24px;
-      text-align: center
+      text-align: center;
     }
 
     .connections {
@@ -24,13 +24,13 @@
 
       .tileContainer {
         margin-left: 1rem;
-        margin-right: 1rem
+        margin-right: 1rem;
       }
     }
 
     .noteContainer {
       max-width: 480px;
-      margin: 0 auto
+      margin: 0 auto;
     }
   }
 
@@ -41,7 +41,7 @@
       h1 {
         max-width: 350px;
         line-height: 35px;
-        margin-bottom: 0.25rem
+        margin-bottom: 0.25rem;
       }
     }
   }
