--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -5,7 +5,7 @@
     width: 100%;
     padding-top: 20px;
     padding-bottom: 15px;
-    text-align: center
+    text-align: center;
   }
 
   .searchContainer {
@@ -24,9 +24,8 @@
       background-color: transparentize($color: $gray, $amount: 0.9);
       transition: background-color $transition1;
       cursor: pointer;
-
       &:hover:not(.disabled) {
-        background-color: transparentize($color: $gray, $amount: 0.8)
+        background-color: transparentize($color: $gray, $amount: 0.8);
       }
 
       .tooltip-wrapper {
@@ -38,34 +37,33 @@
 
         em,
         i {
-          font-size: 1.2rem
+          font-size: 1.2rem;
         }
       }
     }
   }
-
   .tokenListContainer {
     height: 100%;
     max-height: 60vh;
     overflow: auto;
 
     @media (max-width: $mobile) {
-      max-height: 55vh
+      max-height: 55vh;
     }
 
     &::-webkit-scrollbar {
       width: 10px;
-      background-color: $tempTransparent
+      background-color: $tempTransparent;
     }
 
     &::-webkit-scrollbar-thumb {
       border-radius: $borderRadius;
-      cursor: pointer
+      cursor: pointer;
     }
 
     &::-webkit-scrollbar-track {
       background-color: $tempTransparent;
-      border-radius: $borderRadius
+      border-radius: $borderRadius;
     }
 
     .tokenItem {
@@ -78,27 +76,24 @@
       border-bottom: 1px solid;
       cursor: pointer;
       transition: background-color $transition1;
-
       &:last-child {
-        border-bottom: none
+        border-bottom: none;
       }
-
       &.disabled {
         cursor: default;
 
-        .tokenSymbol > span,
-        .rightSide {
-          opacity: 0.5
+        .tokenSymbol > span, .rightSide {
+          opacity: 0.5;
         }
       }
 
       @media screen and (max-width: $mobile) {
         height: 74px !important;
-        padding: 7px 20px !important
+        padding: 7px 20px !important;
       }
 
       &:not(.disabled):hover {
-        background-color: transparentize($color: $gray, $amount: 0.9)
+        background-color: transparentize($color: $gray, $amount: 0.9);
       }
 
       .tokenSymbol {
@@ -106,13 +101,12 @@
 
         & > span {
           transition: opacity $transition1;
-          will-change: opacity
+          will-change: opacity;
         }
-
         .iconInfo {
           position: relative;
           top: 2px;
-          margin-left: 0
+          margin-left: 0;
         }
       }
 
@@ -124,7 +118,7 @@
         will-change: opacity;
 
         .balance {
-          font-size: $tempFontSizeMedium
+          font-size: $tempFontSizeMedium;
         }
       }
 
@@ -135,7 +129,7 @@
         text-align: left;
 
         .rightSide .balance {
-          font-size: 16px
+          font-size: 16px;
         }
       }
     }
@@ -146,11 +140,11 @@ body.inkline {
   &.-light {
     .chooseTokenBlock .tokenListContainer {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-light
+        background-color: $input-border-color-focus-light;
       }
 
       .tokenItem {
-        border-color: $input-border-color-light
+        border-color: $input-border-color-light;
       }
     }
   }
@@ -158,11 +152,11 @@ body.inkline {
   &.-dark {
     .chooseTokenBlock .tokenListContainer {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-dark
+        background-color: $input-border-color-focus-dark;
       }
 
       .tokenItem {
-        border-color: $input-border-color-dark
+        border-color: $input-border-color-dark;
       }
     }
   }
