--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: $white;
+  background: white;
   animation-fill-mode: forwards;
 
   .headerWrapper {
@@ -21,13 +21,12 @@
     width: max-content;
     padding-top: 0 !important;
 
-    .zkwallet-logo,
-    .projectLogo {
+    .zkwallet-logo, .projectLogo {
       height: 55px;
       width: max-content;
 
       @media screen and (max-width: $mobile) {
-        height: 35px
+        height: 35px;
       }
     }
 
@@ -43,7 +42,7 @@
 
   h1 {
     margin: 0;
-    font-size: 36px
+    font-size: 36px;
   }
 
   .hint {
@@ -60,21 +59,21 @@
       left: 0;
       top: 0;
       width: 100%;
-      height: auto
+      height: auto;
     }
 
     .green {
-      color: $green
+      color: $green;
     }
   }
 
   @keyframes nuxtLoadingCustom {
     0% {
-      transform: rotate(0deg)
+      transform: rotate(0deg);
     }
 
     100% {
-      transform: rotate(360deg)
+      transform: rotate(360deg);
     }
   }
 
@@ -84,22 +83,22 @@
     h1 {
       font-size: 24px;
       text-align: center;
-      line-height: 35px
+      line-height: 35px;
     }
 
     .hint {
       font-size: 16px;
-      text-align: center
+      text-align: center;
     }
   }
 }
 
 body.inkline {
   &.-light .loggingInLoader {
-    background-color: $mediumGrey
+    background-color: $mediumGrey;
   }
 
   &.-dark .loggingInLoader {
-    background-color: #1d2039
+    background-color: #1d2039;
   }
 }
