--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -2,7 +2,7 @@
   z-index: 11;
 
   .bn-onboard-custom.bn-onboard-modal-content {
-    width: 100%
+    width: 100%;
   }
 
   .bn-onboard-select-wallet-info {
@@ -11,7 +11,7 @@
     font-size: 16px;
 
     @media screen and (max-width: $mobile) {
-      margin-top: 0.35em
+      margin-top: 0.35em;
     }
   }
 
@@ -23,7 +23,7 @@
     text-decoration: none !important;
 
     &:hover {
-      color: $violet !important
+      color: $violet !important;
     }
   }
 
@@ -31,7 +31,7 @@
     //background-color: transparentize($color: $violet, $amount: 0.9) !important;
 
     .bn-onboard-modal-content {
-      width: 85%
+      width: 85%;
     }
   }
 
@@ -55,16 +55,15 @@
         height: stretch;
       }
 
-
       .bn-onboard-modal-content-header {
-        margin: 1rem 0 !important
+        margin: 1rem 0 !important;
       }
     }
   }
 
   ul.bn-onboard-modal-select-wallets {
     max-height: 50vh !important;
-    overflow: auto
+    overflow: auto;
   }
 
   .bn-onboard-custom.bn-onboard-select-wallet-definition {
@@ -76,14 +75,14 @@
       font-weight: 600;
 
       a {
-        color: $lightViolet !important
+        color: $lightViolet !important;
       }
     }
   }
 
   .bn-onboard-icon-button {
     border-radius: 8px;
-    overflow: hidden
+    overflow: hidden;
   }
 
   .bn-onboard-selected-wallet {
@@ -91,13 +90,13 @@
     box-shadow: 0 0 0 1.5px $violet !important;
 
     &:hover {
-      box-shadow: 0 0 0 2.5px $lightViolet !important
+      box-shadow: 0 0 0 2.5px $lightViolet !important;
     }
 
     span i {
       font-style: normal;
       text-transform: capitalize;
-      text-decoration: none
+      text-decoration: none;
     }
   }
 
@@ -113,24 +112,24 @@
 
     &:hover {
       background-color: $lightViolet !important;
-      border-color: $lightViolet !important
+      border-color: $lightViolet !important;
     }
   }
 
   .bn-onboard-prepare-error,
   .bn-onboard-modal-content-header {
-    background-color: transparent !important
+    background-color: transparent !important;
   }
 
   .bn-onboard-dark-mode-background-hover:hover,
   .bn-onboard-dark-mode-background {
-    background-color: $violet !important
+    background-color: $violet !important;
   }
 
   .bn-onboard-modal-content-header {
     height: auto;
     margin-bottom: 2em;
-    padding: 0
+    padding: 0;
   }
 
   .bn-onboard-modal-content-close {
@@ -140,23 +139,23 @@
 
     svg {
       width: 100%;
-      height: 100%
+      height: 100%;
     }
   }
 
   .bn-onboard-custom.bn-onboard-modal-content-header-icon {
     display: none !important;
-    visibility: hidden !important
+    visibility: hidden !important;
   }
 
   @media screen and (max-width: $mobile) {
     button.bn-onboard-modal.bn-onboard-modal-content {
       margin: 0.25rem 0;
-      padding: 0.5rem
+      padding: 0.5rem;
     }
 
     .bn-onboard-select-wallet-definition {
-      margin-top: 0.8em !important
+      margin-top: 0.8em !important;
     }
 
     .bn-onboard-modal-content {
@@ -166,13 +165,13 @@
         margin: 1rem 0 !important;
 
         h3 {
-          margin: 0 !important
+          margin: 0 !important;
         }
       }
 
       .bn-onboard-custom.bn-onboard-select-description {
         margin: 0 0 0.5rem;
-        padding: 0 0 0.5rem
+        padding: 0 0 0.5rem;
       }
 
       ul.bn-onboard-custom.bn-onboard-modal-select-wallets {
@@ -180,7 +179,7 @@
         max-height: calc(100% - 285px - 2rem) !important;
         //max-height: calc(100% - 150px - 1.5rem) !important;
         margin: 0;
-        padding: 0
+        padding: 0;
       }
 
       .bn-onboard-custom.bn-onboard-select-info-container {
@@ -191,17 +190,17 @@
         border-top: 0.5px solid $lightViolet;
 
         span.bn-onboard-select-wallet-info {
-          margin-top: 0.4rem
+          margin-top: 0.4rem;
         }
       }
 
       .bn-onboard-modal-content-close {
-        top: 2rem
+        top: 2rem;
       }
 
       .bn-onboard-custom.bn-onboard-icon-button {
         margin: 0.25em;
-        padding: 0.25em
+        padding: 0.25em;
       }
     }
   }
@@ -211,49 +210,49 @@
     box-shadow: $defaultShadow;
 
     .bn-onboard-prepare-error {
-      background-color: transparent !important
+      background-color: transparent !important;
     }
 
     .bn-onboard-selected-wallet {
-      background-color: $accentBg !important
+      background-color: $accentBg !important;
     }
   }
 }
 
 #walletconnect-wrapper .walletconnect-modal__base {
   @media (max-height: $mobile) {
-    max-width: 300px
+    max-width: 300px;
   }
 }
 
 section.bn-onboard-custom.bn-onboard-modal-selected-wallet {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem
+  gap: 1.5rem;
 }
 
 footer.bn-onboard-custom.bn-onboard-modal-selected-wallet-footer {
   justify-content: space-between;
   margin: 0;
-  padding: 0
+  padding: 0;
 }
 
 .bn-onboard-custom.bn-onboard-modal-content {
   section.bn-onboard-custom.bn-onboard-modal-content {
     margin: 0 !important;
-    padding: 0 !important
+    padding: 0 !important;
   }
 
   header.bn-onboard-custom.bn-onboard-modal-content-header {
     margin-top: 0 !important;
-    margin-bottom: 0 !important
+    margin-bottom: 0 !important;
   }
 
   div.bn-onboard-custom.bn-onboard-modal-content-close {
     top: 1rem;
     right: 1rem;
     width: 20px;
-    height: 20px
+    height: 20px;
   }
 }
 
@@ -281,7 +280,7 @@ aside.bn-onboard-custom.bn-onboard-modal {
   }
 
   section.bn-onboard-custom.bn-onboard-modal-content {
-    overflow: hidden
+    overflow: hidden;
   }
 }
 
@@ -296,16 +295,16 @@ aside.bn-onboard-custom.bn-onboard-modal {
       gap: 0.5rem;
       padding: 1rem;
       border-radius: 8px !important;
-      height: fit-content !important
+      height: fit-content !important;
     }
 
     header.bn-onboard-custom.bn-onboard-modal-content-header {
-      margin: 0 !important
+      margin: 0 !important;
     }
 
     button.bn-onboard-custom.bn-onboard-icon-button {
       margin: 0 0 0.25rem !important;
-      padding: 0.5rem !important
+      padding: 0.5rem !important;
     }
   }
 }
