--- a/src/assets/style/blocks/_socialBlock.scss
+++ b/src/assets/style/blocks/_socialBlock.scss
@@ -16,20 +16,19 @@
     transition: color $transition1;
 
     &:hover {
-      color: $lightViolet !important
+      color: $lightViolet !important;
     }
 
-    em,
-    i {
+    em, i {
       font-size: 18px;
-      line-height: 20px
+      line-height: 20px;
     }
 
     svg {
       display: block;
       width: 19px;
       height: 19px;
-      object-fit: contain
+      object-fit: contain;
     }
   }
 }
@@ -37,7 +36,7 @@
 body.inkline {
   &.-dark .socialIcons {
     .socialItem {
-      color: $white
+      color: $white;
     }
   }
 }
