--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -4,20 +4,20 @@
 
   &.allowance {
     .minAmount {
-      min-height: 24px
+      min-height: 24px;
     }
   }
 
   input {
-    border-radius: $borderRadiusSm 0 0 $borderRadiusSm !important
+    border-radius: $borderRadiusSm 0 0 $borderRadiusSm !important;
   }
 
   button {
-    border-radius: 0 $borderRadiusSm $borderRadiusSm 0 !important
+    border-radius: 0 $borderRadiusSm $borderRadiusSm 0 !important;
   }
 
   &.error .form-input-group input {
-    box-shadow: 0 0 0 1px $red !important
+    box-shadow: 0 0 0 1px $red !important;
   }
 
   .error {
@@ -26,6 +26,6 @@
     padding-top: 5px;
     color: $red;
     font-size: 12px;
-    line-height: $fontSizeRegular
+    line-height: $fontSizeRegular;
   }
 }
