--- a/src/assets/style/components/_loader.scss
+++ b/src/assets/style/components/_loader.scss
@@ -5,7 +5,7 @@
   border: 0.5rem solid #f5f5f5;
   border-left: 0.5rem solid #8c8dfc;
   transform: translateZ(0);
-  animation: nuxtLoadingCustom 1.1s infinite linear
+  animation: nuxtLoadingCustom 1.1s infinite linear;
 }
 
 .loaderContainer {
@@ -15,40 +15,40 @@
     &-lg {
       &,
       .loaderSpinner,
-      .loaderSpinner:after {
+      .loaderSpinner::after {
         width: 5rem;
-        height: 5rem
+        height: 5rem;
       }
     }
 
     &-md {
       &,
       .loaderSpinner,
-      .loaderSpinner:after {
+      .loaderSpinner::after {
         width: 4rem;
-        height: 4rem
+        height: 4rem;
       }
     }
 
     &-sm {
       &,
       .loaderSpinner,
-      .loaderSpinner:after {
+      .loaderSpinner::after {
         width: 3rem;
-        height: 3rem
+        height: 3rem;
       }
     }
 
     &-xs {
       &,
       .loaderSpinner,
-      .loaderSpinner:after {
+      .loaderSpinner::after {
         width: 1.2rem;
-        height: 1.2rem
+        height: 1.2rem;
       }
 
       .loaderSpinner {
-        border-width: 0.2rem
+        border-width: 0.2rem;
       }
     }
   }
@@ -64,8 +64,8 @@
     will-change: transform;
 
     &,
-    &:after {
-      border-radius: 50%
+    &::after {
+      border-radius: 50%;
     }
   }
 }
