--- a/src/assets/style/components/custom/_input.scss
+++ b/src/assets/style/components/custom/_input.scss
@@ -12,7 +12,7 @@
     background: $white;
     border-radius: $borderRadiusMd;
     box-shadow: $inputContainerShadow;
-    transition: background-color0.2s ease;
+    transition: background-color.2s ease;
 
     .pre {
       display: flex;
@@ -30,7 +30,7 @@
       img {
         width: auto;
         height: 100%;
-        margin-right: 6px
+        margin-right: 6px;
       }
     }
 
@@ -48,11 +48,11 @@
       background-color: $tempTransparent;
       border: none;
       outline: none !important;
-      transition: color0.2s ease;
+      transition: color.2s ease;
 
       &::placeholder {
         color: $gray;
-        font-weight: 600
+        font-weight: 600;
       }
     }
 
@@ -65,7 +65,7 @@
       color: $violet;
       font-size: $fontSizeRegular;
       border-left: 2px solid $purple;
-      transition: color0.2s ease, border-color0.2s ease
+      transition: color.2s ease, border-color.2s ease;
     }
   }
 
@@ -75,7 +75,7 @@
       background-color: $lighterGray !important;
 
       .append {
-        border-color: $gray !important
+        border-color: $gray !important;
       }
     }
 
@@ -83,23 +83,23 @@
       background-color: $redBg;
 
       input {
-        color: $red
+        color: $red;
       }
 
       .append {
         color: $red;
-        border-color: $red
+        border-color: $red;
       }
     }
 
     &success .inputContainer {
       input {
-        color: $green
+        color: $green;
       }
 
       .append {
         color: $green;
-        border-color: $green
+        border-color: $green;
       }
     }
   }
@@ -112,22 +112,21 @@
     grid-template-columns: 100%;
     width: 100%;
     height: max-content;
-    margin-top: 10px
+    margin-top: 10px;
   }
 }
 
-.spin-animation,
-.ri-loader-5-line {
+.spin-animation, .ri-loader-5-line {
   display: inline-block;
-  animation: spin 0.5s linear 0s infinite
+  animation: spin 0.5s linear 0s infinite;
 }
 
 @keyframes spin {
   from {
-    transform: rotate(0deg)
+    transform: rotate(0deg);
   }
 
   to {
-    transform: rotate(360deg)
+    transform: rotate(360deg);
   }
 }
