--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -1,7 +1,7 @@
 .contactsPage {
   .isDeleted {
     color: $red;
-    text-align: center
+    text-align: center;
   }
 
   .tileBlock {
@@ -9,14 +9,14 @@
 
     @media screen and (max-width: $mobile) {
       margin-bottom: 0;
-      margin-top: 0
+      margin-top: 0;
     }
   }
 }
 
 .modalError {
   color: $red;
-  text-align: center
+  text-align: center;
 }
 
 .contactTile {
@@ -28,9 +28,8 @@
   .tileHeadline {
     display: flex;
     align-items: stretch;
-
     span {
-      line-height: 24px
+      line-height: 24px;
     }
   }
 }
@@ -44,17 +43,17 @@
 
   &::-webkit-scrollbar {
     width: 10px;
-    background-color: $tempTransparent
+    background-color: $tempTransparent;
   }
 
   &::-webkit-scrollbar-thumb {
     border-radius: $borderRadius;
-    cursor: pointer
+    cursor: pointer;
   }
 
   &::-webkit-scrollbar-track {
     background-color: $tempTransparent;
-    border-radius: $borderRadius
+    border-radius: $borderRadius;
   }
 
   .contactItem {
@@ -69,25 +68,24 @@
     border-bottom: 1px solid;
     cursor: pointer;
     transition: background-color $transition1;
-
     &:last-child {
-      border-bottom: none
+      border-bottom: none;
     }
 
     &:hover {
-      background-color: transparentize($color: $gray, $amount: 0.9)
+      background-color: transparentize($color: $gray, $amount: 0.9);
     }
 
     &.deleted {
       .contactInfo {
-        color: lighten($color: $red, $amount: 10)
+        color: lighten($color: $red, $amount: 10);
       }
     }
 
     .userImg {
       width: 30px;
       height: 30px;
-      pointer-events: none
+      pointer-events: none;
     }
 
     .contactInfo {
@@ -102,14 +100,14 @@
         overflow: hidden;
         font-size: 24px;
         line-height: 26px;
-        text-overflow: ellipsis
+        text-overflow: ellipsis;
       }
 
       .contactAddress {
         width: 100%;
         overflow: hidden;
         font-size: 12px;
-        text-overflow: ellipsis
+        text-overflow: ellipsis;
       }
     }
 
@@ -125,7 +123,7 @@
           &:active {
             color: $green !important;
             background-color: transparentize($color: $gray, $amount: 0.7) !important;
-            transition: 0.001s
+            transition: 0.001s;
           }
         }
       }
@@ -137,7 +135,7 @@
   max-height: 60vh;
 
   @media (max-width: $mobile) {
-    max-height: 55vh
+    max-height: 55vh;
   }
 }
 
@@ -145,11 +143,11 @@ body.inkline {
   &.-light {
     .contactsListContainer {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-light
+        background-color: $input-border-color-focus-light;
       }
 
       .contactItem {
-        border-color: $input-border-color-light
+        border-color: $input-border-color-light;
       }
     }
   }
@@ -157,11 +155,11 @@ body.inkline {
   &.-dark {
     .contactsListContainer {
       &::-webkit-scrollbar-thumb {
-        background-color: $input-border-color-focus-dark
+        background-color: $input-border-color-focus-dark;
       }
 
       .contactItem {
-        border-color: $input-border-color-dark
+        border-color: $input-border-color-dark;
       }
     }
   }
